--- a/src/app/features/auth/form.component.html
+++ b/src/app/features/auth/form.component.html
@@ -1,4 +1,4 @@
-<div class="border flex flex-col p-6 rounded-md max-w-md mx-auto">
+<div class="flex flex-col p-6 rounded-md max-w-md mx-auto border shadow-md dark:border-gray-700">
   <div>
     <h2 class="text-xl">{{ isLogin() ? 'Connexion' : 'Créer son compte' }}</h2>
     <p class="text-gray-500 text-sm italic">Veuillez renseigner vos informations.</p>
