--- a/src/app/shared/components/header.component.html
+++ b/src/app/shared/components/header.component.html
@@ -2,6 +2,13 @@
   <div class="mx-auto flex justify-between items-center">
     <p-button routerLink="/" icon="pi pi-home" rounded outlined size="large"></p-button>
     <div class="flex gap-2">
+      <p-button
+        rounded
+        outlined
+        size="large"
+        (onClick)="toggleDarkMode()"
+        [icon]="isDarkMode ? 'pi pi-sun' : 'pi pi-moon'"
+      />
       @if (currentUser()) {
         <p-menu class="text-sm" #menu [model]="items()" [popup]="true">
           <ng-template #start>
