--- a/src/app/features/tasks/components/tasks.modal.component.html
+++ b/src/app/features/tasks/components/tasks.modal.component.html
@@ -1,4 +1,11 @@
-<p-dialog header="Nouvelle Tâche" [(visible)]="visible" [modal]="true" [style]="{ width: '25rem' }">
+<p-dialog
+  [header]="taskId() ? 'Modifier la tâche' : 'Nouvelle Tâche'"
+  [(visible)]="visible"
+  [modal]="true"
+  [style]="{ width: '25rem' }"
+  (onShow)="onDialogOpen()"
+  (onHide)="close()"
+>
   <form [formGroup]="taskForm" (ngSubmit)="onSubmit()" class="flex flex-col gap-4 mt-2">
     <div class="flex flex-col gap-1">
       <label for="title" class="font-semibold">Titre</label>
@@ -19,20 +26,30 @@
     @if (currentUserIsAdmin) {
       <div class="flex flex-col gap-1">
         <label for="targetUserId" class="font-semibold">Attribuer à l'utilisateur</label>
-        <select id="targetUserId" formControlName="targetUserId" class="p-inputtext flex-auto">
-          <option value="">Sélectionner un utilisateur</option>
-          @for (user of users(); track user.id) {
-            <option [value]="user.id">{{ user.username }}</option>
-          } @empty {
-            <span>Aucun utilisateur de disponible</span>
-          }
-        </select>
+        <p-select
+          id="targetUserId"
+          formControlName="targetUserId"
+          [options]="users()"
+          optionLabel="username"
+          optionValue="id"
+          placeholder="Sélectionner un utilisateur"
+          class="w-full"
+          appendTo="body"
+        >
+          <ng-template pTemplate="empty">
+            <span>Aucun utilisateur disponible</span>
+          </ng-template>
+        </p-select>
       </div>
     }
 
     <div class="flex justify-end gap-2 mt-4">
       <p-button label="Annuler" severity="secondary" (onClick)="close()" />
-      <p-button label="Enregistrer" type="submit" [disabled]="taskForm.invalid" />
+      <p-button
+        [label]="taskId() ? 'Modifier' : 'Créer'"
+        type="submit"
+        [disabled]="taskForm.invalid"
+      />
     </div>
   </form>
 </p-dialog>
